# advent_of_code

./: .gitattributes  .gitignore  README.md  deno.json
everybody.codes/event_2024/: Cargo.toml
everybody.codes/event_2024/quests/: readme.md
everybody.codes/event_2024/quests/q01/: Cargo.toml
everybody.codes/event_2024/quests/q01/src/: main.rs
everybody.codes/event_2024/quests/q02/: Cargo.toml
everybody.codes/event_2024/quests/q02/src/: main.rs
everybody.codes/event_2024/quests/q03/: Cargo.toml
everybody.codes/event_2024/quests/q03/src/: main.rs
everybody.codes/event_2024/quests/q04/: Cargo.toml
everybody.codes/event_2024/quests/q04/src/: main.rs
everybody.codes/event_2024/quests/q07/: Cargo.toml
everybody.codes/event_2024/src/: lib.rs  permutations.rs
everybody.codes/event_2025/: Cargo.toml  readme.md
everybody.codes/event_2025/quests/q02/: Cargo.toml
everybody.codes/event_2025/quests/q03/: Cargo.toml
everybody.codes/event_2025/quests/q04/: Cargo.toml
everybody.codes/event_2025/quests/q05/: Cargo.toml
everybody.codes/event_2025/quests/q06/: Cargo.toml
everybody.codes/event_2025/quests/q08/: Cargo.toml
everybody.codes/event_2025/quests/q09/: Cargo.toml
everybody.codes/event_2025/quests/q10/: Cargo.toml
python/: newday.sh  pyproject.toml  requirements.txt
python/2015/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
python/2016/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py
python/2020/: day08.py  day10.py  day11.py  day12.py  day13.py
python/2021/: day03.py  day04.py  day05.py  day08.py  day08_lazy_solution.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py
python/2022/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
python/2023/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  runner.py
python/2024/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
python/support/: README.md  pyproject.toml  support.py
(+113 files in other folders)
