[project]
name = "aoc"
version = "1"
requires-python = ">=3.8"

[tool.basedpyright]
verboseOutput = true
reportUnnecessaryTypeIgnoreComment = true
reportUnnecessaryIsInstance = false
reportMissingImports = false
reportMissingModuleSource = false
reportAny = false
reportExplicitAny = false

[[tool.basedpyright.executionEnvironments]]
extraPaths = [ "support" ]
root = "."

[tool.mypy]
mypy_path = "support"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
